--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
   <div align="center">
   <input  style="width: 300px" type="text" class="form-control">
   <button  (click)="onSearch()"class="btn btn-success">search</button>
+  <app-posts>hey</app-posts>
 </div>
 
 
